Added endpoint and panel
